--- a/Pages/Movies/PurchaseTicket.cshtml
+++ b/Pages/Movies/PurchaseTicket.cshtml
@@ -35,8 +35,8 @@
                 <span asp-validation-for="Movie.Salon" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Movie.SeatsLeft" class="control-label">Ticket Amount</label>
-                <select asp-for="Movie.SeatsLeft" class="form-control">
+                <label class="control-label">Ticket Amount</label>
+                <select asp-for="TicketAmount" class="form-control">
                     <option value=1>1</option>
                     <option value=2>2</option>
                     <option value=3>3</option>
