--- a/Pages/Movies/PurchaseTicket.cshtml
+++ b/Pages/Movies/PurchaseTicket.cshtml
@@ -24,11 +24,11 @@
                 <input asp-for="Movie.StartTime" class="form-control" readonly="readonly" />
                 <span asp-validation-for="Movie.StartTime" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Movie.SeatsLeft" class="control-label"></label>
                 <input asp-for="Movie.SeatsLeft" class="form-control" readonly="readonly" />
                 <span asp-validation-for="Movie.SeatsLeft" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Movie.Salon" class="control-label"></label>
                 <input asp-for="Movie.Salon" class="form-control" readonly="readonly" />
