Improved readibility of order details

--- a/Pages/Movies/SuccesfullOrderDetails.cshtml
+++ b/Pages/Movies/SuccesfullOrderDetails.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayFor(model => model.Movie.Title)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Movie.StartTime)
+            @Html.DisplayName("Starts")
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.StartTime)
@@ -30,7 +30,7 @@
             @Html.DisplayFor(model => model.Movie.Salon)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TicketsPurchased)
+            @Html.DisplayName("Tickets")
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TicketsPurchased)
