Added event-handler to seed database on button click

--- a/Pages/Movies/AvailableMovies.cshtml
+++ b/Pages/Movies/AvailableMovies.cshtml
@@ -7,6 +7,10 @@
 
 <h1>AvailableMovies</h1>
 
+<form asp-page-handler="seeddatabase" method="post">
+    <button class="btn btn-default">Seed Database</button>
+</form>
+
 <table class="table">
     <thead>
         <tr>
