More movies in seed function. Ability to empty database when wanting to seed database with data already in it.

--- a/Pages/Movies/AvailableMovies.cshtml
+++ b/Pages/Movies/AvailableMovies.cshtml
@@ -8,6 +8,12 @@
 <h1>Movies</h1>
 <a asp-page="./SeedDatabase">Seed Database</a>
 
+<div>
+    <form asp-page-handler="sortbyseatsleft" method="post">
+        <button>Sort by seats left</button>
+    </form>
+</div>
+
 <table class="table">
     <thead>
         <tr>
