You can now sort movies by start time

--- a/Pages/Movies/AvailableMovies.cshtml
+++ b/Pages/Movies/AvailableMovies.cshtml
@@ -12,6 +12,9 @@
     <form asp-page-handler="sortbyseatsleft" method="post">
         <button>Sort by seats left</button>
     </form>
+    <form asp-page-handler="sortbystarttime" method="post">
+        <button>Sort by start time</button>
+    </form>
 </div>
 
 <table class="table">
