--- a/Pages/Movies/PurchaseTicket.cshtml
+++ b/Pages/Movies/PurchaseTicket.cshtml
@@ -37,18 +37,10 @@
             <div class="form-group">
                 <label class="control-label">Ticket Amount</label>
                 <select asp-for="TicketAmount" class="form-control">
-                    <option value=1>1</option>
-                    <option value=2>2</option>
-                    <option value=3>3</option>
-                    <option value=4>4</option>
-                    <option value=5>5</option>
-                    <option value=6>6</option>
-                    <option value=7>7</option>
-                    <option value=8>8</option>
-                    <option value=9>9</option>
-                    <option value=10>10</option>
-                    <option value=11>11</option>
-                    <option value=12>12</option>
+                    @for(int i = 1; i <= Model.ticketOptionAmount; i++)
+                    {
+                        <option value=@i>@i</option>
+                    }
                 </select>
                 <span asp-validation-for="Movie.SeatsLeft" class="text-danger"></span>
             </div>
