Prettied up the entire app with styling, more text content, and changing elements text to something more appropriate

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Berras Bio</h1>
+    <p>Welcome to Berras Bio, where we specialize in <a href="/Movies/AvailableMovies">dank movies</a>, for all your dank needs!</p>
 </div>
