--- a/Pages/Movies/AvailableMovies.cshtml
+++ b/Pages/Movies/AvailableMovies.cshtml
@@ -10,17 +10,27 @@
         .sold-out-movie {
             color: #9f9493;
         }
+
+        .sort-buttons {
+            display: inline;
+        }
+
+        #seed-database-div {
+            padding-bottom: 10px;
+        }
     </style>
 </head>
 
-<h1>Movies</h1>
-<a asp-page="./SeedDatabase">Seed Database</a>
+<h1 class="display-4 text-center">Movies</h1>
+<div id="seed-database-div">
+    <a asp-page="./SeedDatabase">Seed Database</a>
+</div>
 
 <div>
-    <form asp-page-handler="sortbyseatsleft" method="post">
+    <form asp-page-handler="sortbyseatsleft" method="post" class="sort-buttons">
         <button>Sort by seats left</button>
     </form>
-    <form asp-page-handler="sortbystarttime" method="post">
+    <form asp-page-handler="sortbystarttime" method="post" class="sort-buttons">
         <button>Sort by start time</button>
     </form>
 </div>
