--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -3,6 +3,29 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<head>
+    <style>
+        h1 {
+            padding-bottom: 10px;
+        }
+    </style>
+</head>
+
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<p>
+    <b>NOTE: THE FOLLOWING IS A JOKE...</b><br />
+    Your privacy and trust is crucial to us here at Berras Bio, therefore we only sell absolutely every
+    single piece of information we can gather from your time spent here on the website. We don't care,
+    we'll sell to the most corrupt companies if it means the biggest bidder.
+    What are you gonna do? Sue us? Good luck. We're transparent as **** and follow the laws boiiii.
+    Go complain about your country not being strict enough if you've got a problem. Until then, guess
+    we'll keep being slimy snakes.<br />
+
+    GGEZ,<br />
+    <b>
+        Berras Bio<br />
+        END JOKE
+    </b>
+</p>
